# SelenEnchanted

./: .gitignore  README.md  Read-me.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml  python-package.yml  python-publish.yml
examples/: ex_1_quick_start.py  ex_2_modify_options.py  ex_3_selenium_wire.py  ex_4_structlogs.py  ex_5_humanlike_mouse_movement.py  ex_6_using_listener.py
selen_enchanted/: __init__.py
selen_enchanted/agents/: info.py  user_agency.py
selen_enchanted/components/: actions.py  cookies.py  listener.py  locator.py  scroller.py  tab.py
selen_enchanted/core/: browser.py  driver.py  javascripts.py  options.py
selen_enchanted/utilities/: decorators.py  exceptions.py  logger.py  meta_classes.py  profiler.py  sleeper.py
