[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selen-enchanted"
version = "0.0.10"
description = "A selenium wrapper that makes it easier to use"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Andrew Naaem", email = "andrew.naaem99@gmail.com"}
]
keywords = ["selenium", "wrapper", "automation", "testing"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/Andrew2077/SelenEnchanted"