[metadata]
name = selen-enchanted
version = 0.0.10
author = Andrew Naaem
author_email = andrew.naaem99@gmail.com
description = A selenium wrapper that makes it easier to use
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Andrew2077/SelenEnchanted
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
keywords = selenium, wrapper, automation, testing

[options]
packages = find:
install_requires =
    selenium>=3.141.0
    requests>=2.25.1
    beautifulsoup4>=4.9.3

