[metadata]
name = selen-enchanted
version = 0.0.10.6
author = Andrew Naaem
author_email = andrew.naaem99@gmail.com
description = A selenium wrapper that makes it easier to use
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Andrew2077/SelenEnchanted
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
keywords = selenium, wrapper, automation, testing

[options]
packages = find:
install_requires =
    chromedriver-autoinstaller>=0.6.2
    requests>=2.32.3
    selenium>=4.23.1
    selenium-wire>=5.1.0
    ua-generator>=0.5.1
    user-agents>=2.2.0
    webdriver-manager>=4.0.1
    blinker>=1.6.2
    Pillow>=11.0.0
    structlog>=23.1.0

